force-app/main/default/objects/IrrigationPlanner__c/IrrigationPlanner__c.object-meta.xml
<CustomObject>
    <label>Irrigation Planner</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Irrigation Planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>