force-app/main/default/objects/IrrigationPlanner__c/fields/ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDate__c</fullName>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>