force-app/main/default/objects/IrrigationPlanner__c/fields/WaterLevel__c.field-meta.xml
<CustomField>
    <fullName>WaterLevel__c</fullName>
    <label>Water Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>