force-app/main/default/objects/IrrigationPlanner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>WaterLevel__c</columns>
    <columns>ScheduleDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>